--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1314,11 +1314,28 @@ color:#212834;</string>
         <widget class="Registry" name="redListPage">
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QToolButton" name="redListAddButton">
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <spacer name="horizontalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QToolButton" name="redListAddButton">
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <widget class="QTableWidget" name="redListTable">
