--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -399,7 +399,7 @@ QComboBox {
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>5</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="homePage"/>
         <widget class="QWidget" name="dogSheetsPage"/>
@@ -707,178 +707,6 @@ QTabBar::tab:selected {
                   <property name="verticalSpacing">
                    <number>10</number>
                   </property>
-                  <item row="15" column="2">
-                   <layout class="QVBoxLayout" name="cityAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="cityAbandonEditLabel">
-                      <property name="text">
-                       <string>VILLE</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="cityAbandonEdit">
-                      <property name="text">
-                       <string>Ville</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="6" column="1">
-                   <layout class="QVBoxLayout" name="firstNameAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="firstNameAbandonEditLabel">
-                      <property name="text">
-                       <string>PRÉNOM</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="firstNameAbandonEdit">
-                      <property name="text">
-                       <string>Prénom</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="15" column="1">
-                   <layout class="QVBoxLayout" name="postalCodeAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="postalCodeAbandonEditLabel">
-                      <property name="text">
-                       <string>CODE POSTAL</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="postalCodeAbandonEdit">
-                      <property name="text">
-                       <string>Code postal</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="6" column="2">
-                   <layout class="QVBoxLayout" name="lastNameAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="lastNameAbandonEditLabel">
-                      <property name="text">
-                       <string>NOM</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="lastNameAbandonEdit">
-                      <property name="text">
-                       <string>Nom</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="13" column="2">
-                   <layout class="QVBoxLayout" name="address2AbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="address2AbandonEditLabel">
-                      <property name="text">
-                       <string>COMPLÉMENT D'ADRESSE</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="address2AbandonEdit">
-                      <property name="styleSheet">
-                       <string notr="true"/>
-                      </property>
-                      <property name="text">
-                       <string>Adresse 2</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="11" column="1" colspan="2">
-                   <layout class="QVBoxLayout" name="emailAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="emailAbandonEditLabel">
-                      <property name="text">
-                       <string>EMAIL</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="emailAbandonEdit">
-                      <property name="text">
-                       <string>Mail</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="13" column="1">
-                   <layout class="QVBoxLayout" name="addressAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="addressAbandonEditLabel">
-                      <property name="text">
-                       <string>ADRESSE</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="addressAbandonEdit">
-                      <property name="text">
-                       <string>Adresse</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="9" column="1" colspan="2">
-                   <layout class="QVBoxLayout" name="phoneAbandonEditLayout">
-                    <item>
-                     <widget class="QLabel" name="phoneAbandonEditLabel">
-                      <property name="text">
-                       <string>TÉLÉPHONE</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QLineEdit" name="phoneAbandonEdit">
-                      <property name="text">
-                       <string>Téléphone</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
-                  <item row="0" column="1">
-                   <layout class="QVBoxLayout" name="entryTypeBoxLayout">
-                    <item>
-                     <widget class="QLabel" name="entryTypeBoxLabel">
-                      <property name="text">
-                       <string>TYPE D'ENTRÉE</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QComboBox" name="entryTypeBox">
-                      <item>
-                       <property name="text">
-                        <string>Abandon</string>
-                       </property>
-                      </item>
-                      <item>
-                       <property name="text">
-                        <string>Fourrière</string>
-                       </property>
-                      </item>
-                     </widget>
-                    </item>
-                   </layout>
-                  </item>
                   <item row="0" column="2">
                    <layout class="QVBoxLayout" name="entryDateEditLayout">
                     <item>
@@ -917,6 +745,31 @@ QTabBar::tab:selected {
                       <property name="text">
                        <string>Lieu (fourrière)</string>
                       </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                  <item row="0" column="1">
+                   <layout class="QVBoxLayout" name="entryTypeBoxLayout">
+                    <item>
+                     <widget class="QLabel" name="entryTypeBoxLabel">
+                      <property name="text">
+                       <string>TYPE D'ENTRÉE</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QComboBox" name="entryTypeBox">
+                      <item>
+                       <property name="text">
+                        <string>Abandon</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Fourrière</string>
+                       </property>
+                      </item>
                      </widget>
                     </item>
                    </layout>
@@ -1445,7 +1298,7 @@ color:#212834;</string>
   <customwidget>
    <class>Registry</class>
    <extends>QWidget</extends>
-   <header location="global">registry.h</header>
+   <header>registry.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -1457,14 +1310,6 @@ color:#212834;</string>
   <tabstop>entryDateEdit</tabstop>
   <tabstop>entryTypeBox</tabstop>
   <tabstop>poundPlaceEdit</tabstop>
-  <tabstop>firstNameAbandonEdit</tabstop>
-  <tabstop>lastNameAbandonEdit</tabstop>
-  <tabstop>phoneAbandonEdit</tabstop>
-  <tabstop>emailAbandonEdit</tabstop>
-  <tabstop>addressAbandonEdit</tabstop>
-  <tabstop>address2AbandonEdit</tabstop>
-  <tabstop>postalCodeAbandonEdit</tabstop>
-  <tabstop>cityAbandonEdit</tabstop>
   <tabstop>cancelButton</tabstop>
   <tabstop>submitButton</tabstop>
   <tabstop>exportCareButton</tabstop>
