--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -934,13 +934,18 @@ QTabBar::tab:selected {
              </layout>
             </widget>
             <widget class="QWidget" name="redListEditPage">
+             <property name="styleSheet">
+              <string notr="true">QLineEdit{
+	font-weight:normal;
+}</string>
+             </property>
              <layout class="QVBoxLayout" name="verticalLayout_6">
               <item>
                <layout class="QVBoxLayout" name="reasonRedListEditLayout">
                 <item>
                  <widget class="QLabel" name="reasonRedListEditLabel">
                   <property name="text">
-                   <string>Motif</string>
+                   <string>MOTIF</string>
                   </property>
                  </widget>
                 </item>
@@ -989,6 +994,9 @@ QTabBar::tab:selected {
         </widget>
         <widget class="DogRegistry" name="careRegistryPage">
          <layout class="QVBoxLayout" name="verticalLayout">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <item>
            <widget class="QPushButton" name="exportCareButton">
             <property name="text">
@@ -1184,12 +1192,21 @@ color:#212834;</string>
         </widget>
         <widget class="Registry" name="redListPage">
          <layout class="QVBoxLayout" name="verticalLayout_5">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
             <item>
              <spacer name="horizontalSpacer_3">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -1270,6 +1287,11 @@ color:#212834;</string>
               <string>Motif</string>
              </property>
             </column>
+            <column>
+             <property name="text">
+              <string> </string>
+             </property>
+            </column>
            </widget>
           </item>
          </layout>
@@ -1329,7 +1351,6 @@ color:#212834;</string>
   <tabstop>entryTypeBox</tabstop>
   <tabstop>poundPlaceEdit</tabstop>
   <tabstop>menuTree</tabstop>
-  <tabstop>redListAddButton</tabstop>
   <tabstop>exportCareButton</tabstop>
   <tabstop>careAddButton</tabstop>
   <tabstop>entryTable</tabstop>
