--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -996,16 +996,16 @@ QTabBar::tab:selected {
                    <number>10</number>
                   </property>
                   <item row="0" column="1">
-                   <layout class="QVBoxLayout" name="careDateEditLayout">
+                   <layout class="QVBoxLayout" name="careEntryDateEditLayout">
                     <item>
-                     <widget class="QLabel" name="careDateEditLabel">
+                     <widget class="QLabel" name="careEntryDateEditLabel">
                       <property name="text">
                        <string>DATE D'ENTRÉE</string>
                       </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QDateEdit" name="careDateEdit">
+                     <widget class="QDateEdit" name="careEntryDateEdit">
                       <property name="calendarPopup">
                        <bool>true</bool>
                       </property>
