--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,8 +63,23 @@ QTableWidget::item:selected {
  }
 
 QHeaderView::section {
-	background-color: #212834; color: white; font-weight: bold; 
-}</string>
+	background-color: #212834;
+	color: white;
+	font-weight: bold; 
+}
+
+QPushButton{
+	background-color:#3b4b64;
+	font-weight:bold;
+	color:white;
+	padding:10px;
+}
+
+QToolButton, QPushButton{
+	border:none;
+	border-radius:5px;
+}
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QFormLayout" name="formLayout_2">
@@ -413,13 +428,6 @@ QComboBox {
            <number>0</number>
           </property>
           <item>
-           <widget class="QPushButton" name="exportEntryButton">
-            <property name="text">
-             <string>Exporter en PDF</string>
-            </property>
-           </widget>
-          </item>
-          <item>
            <layout class="QHBoxLayout" name="entryLabelLayout">
             <property name="spacing">
              <number>0</number>
@@ -608,6 +616,13 @@ color:#212834;</string>
             </column>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="exportEntryButton">
+            <property name="text">
+             <string>Exporter en PDF</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
         <widget class="EditPage" name="editPage">
@@ -628,11 +643,6 @@ QLabel{
 QLineEdit, QDateTimeEdit, QComboBox {
 	border: 2px solid #e7e9ed;
 	border-radius: 5px;
-}
-
-QPushButton{
-	background-color:white;
-	border:none;
 }
 
 QComboBox {
@@ -1060,10 +1070,16 @@ QTabBar::tab:selected {
                     </item>
                    </layout>
                   </item>
-                  <item row="0" column="1">
+                  <item row="1" column="0" colspan="2">
                    <widget class="QPushButton" name="sameCareButton">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
                     <property name="text">
-                     <string>Idem</string>
+                     <string>Copier l'entrée</string>
                     </property>
                    </widget>
                   </item>
@@ -1079,8 +1095,15 @@ QTabBar::tab:selected {
            <layout class="QHBoxLayout" name="editButtonsLayout">
             <item>
              <widget class="QToolButton" name="removeButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="styleSheet">
-               <string notr="true">background-color:#984800;</string>
+               <string notr="true">background-color:#984800;
+padding:10px;</string>
               </property>
               <property name="text">
                <string>...</string>
@@ -1485,7 +1508,6 @@ color:#212834;</string>
   <tabstop>careAddButton</tabstop>
   <tabstop>entryTable</tabstop>
   <tabstop>entryAddButton</tabstop>
-  <tabstop>exportEntryButton</tabstop>
   <tabstop>careTable</tabstop>
   <tabstop>entryTabWidget</tabstop>
   <tabstop>prevDestButton</tabstop>
