--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1451,8 +1451,38 @@ color:#212834;</string>
         </widget>
         <widget class="QWidget" name="lostPage"/>
         <widget class="QWidget" name="adoptionDemandPage"/>
-        <widget class="QWidget" name="membersPage">
+        <widget class="Registry" name="membersPage">
          <layout class="QVBoxLayout" name="verticalLayout_8">
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <item>
+             <spacer name="horizontalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Expanding</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QToolButton" name="membersAddButton">
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
           <item>
            <widget class="QTableWidget" name="membersTable">
             <property name="sizePolicy">
@@ -1497,6 +1527,9 @@ color:#212834;</string>
             <attribute name="horizontalHeaderDefaultSectionSize">
              <number>90</number>
             </attribute>
+            <attribute name="verticalHeaderVisible">
+             <bool>false</bool>
+            </attribute>
             <column>
              <property name="text">
               <string>#</string>
@@ -1505,6 +1538,11 @@ color:#212834;</string>
               <font>
                <bold>false</bold>
               </font>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Date adhésion</string>
              </property>
             </column>
             <column>
@@ -1525,11 +1563,6 @@ color:#212834;</string>
             <column>
              <property name="text">
               <string>Mail</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Date adhésion</string>
              </property>
             </column>
             <column>
